15913 zfs: get_special_prop() should also check for ZFS_TYPE_SNAPSHOT Reviewed by: Marco van Wieringen <marco.van.wieringen@planets.elm.net> Approved by: Patrick Mooney <pmooney@pfmooney.com>